Remove 10 dakika and 1 saat interval buttons

--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
                         <button class="control-btn time-btn" data-range="yearly">Yıllık</button>
                     </div>
 
-                    <!-- Tarih ve Interval Seçiciler (Sadece Günlük Görünümde) -->
+                    <!-- Tarih ve PDF Seçiciler (Sadece Günlük Görünümde) -->
                     <div class="control-row date-row" id="dateDensitySelector">
                         <input type="date" id="dateInput" class="date-input control-btn">
-                        <button class="control-btn interval-btn left-rounded" data-interval="10">10 Dakika</button>
-                        <button class="control-btn interval-btn right-rounded active" data-interval="60">1 Saat</button>
                         <button class="control-btn pdf-btn" id="pdfBtn">📄 PDF İndir</button>
                     </div>
                 </div>
